<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation,ExtraTranslation">
    <string name="facebook_app_id">1117783308285421</string>
    <string name="fb_login_protocol_scheme">fb1117783308285421</string>
    <string name="banner_ad_unit_id">ca-app-pub-5130888087776673/4478410348</string>
    <string name="interstitial_full_screen">ca-app-pub-5130888087776673/2947644743</string>
    <string name="app_name">Bdjobs</string>
    <string name="hint_keyword">Job title, Keyword</string>
    <string name="hint.location">Location</string>
    <string name="hint.rf_phone_office">Phone No (Office)</string>
    <string name="hint.Category">Category</string>
    <string name="field_empty_error_message_common">This field can not be empty!</string>
    <string name="title_activity_main_landing">MainLandingActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main22">MainActivity22</string>
    <string name="hint.voiceInput">Say something</string>
    <string name="turn_on_wifi">Turn Wifi on</string>
    <string name="alert_no_internet">No internet connection!</string>
    <string name="otp_message">Please type the verification code sent to +88</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help_career_summary">The career summary section is an optional customized section of a resume that lists key achievements, skills, and experience relevant to the position for which you are applying.The career summary section of your resume focuses on your relevant experience and lets the prospective employer know that you have taken the time to create a resume that shows how you are qualified for the job.</string>
    <string name="help_special_qualification">Special Qualifications (Replacing the Objective) is 3-5 concise sentences on a resume. It is a summary of your most pertinent experience and qualifications that is customized for the position in which you are applying. This is also a place where attributes, such as punctuality and honesty, can be conveyed that would otherwise not be appropriate under work experience. Use the job description to help identify the areas of expertise, distinction, traits and related experiences you have without using the words</string>
    <string name="cv_up_shortcut">CV UPLOAD</string>
    <string name="err_msg_name">Username can not be empty!</string>
    <string name="err_msg_password">Password can not be empty!</string>
    <string name="heading.toolbar.addAcademicQualification">Add Academic</string>
    <string name="hint.level_of_education">Level of Education *</string>
    <string name="message.checkbox.degreeShow">Show this degree in summary view at employers end</string>
    <string name="hint.exam_degree_title">Exam / Degree Title *</string>
    <string name="hint.Other_exam_degree_title">Other</string>
    <string name="hint.concentration_major_group">\u0020Concentration / Major / Group *</string>
    <string name="hint.board">Board *</string>
    <string name="hint.institute_name">\u0020Institute Name *</string>
    <string name="hint.institute_name_tr">Institute *</string>
    <string name="hint.institute_name_prf">Institute Name *</string>
    <string name="hint.ref_designation">Designation *</string>
    <string name="message.foreign_institute">Is specified institute is a foreign institute?</string>
    <string name="hint.yes">Yes</string>
    <string name="message.if_no_then_leave_this_option_blank">[If no then leave this option Blank]</string>
    <string name="hint.result">Result</string>
    <string name="hint.passing_year">Passing Year</string>
    <string name="hint.duration">Duration</string>
    <string name="hint.duration_tr">Duration *</string>
    <string name="hint.ref_email">Email Address</string>
    <string name="hint.achievement">Achievement</string>
    <string name="hint.save">Save</string>
    <string name="heading.toolbar.addProfessionalQualification">Add Professional Qualification</string>
    <string name="hint.certification">Certification *</string>
    <string name="hint.start_date">Start Date *</string>
    <string name="hint.start_date_filter">Start Date </string>
    <string name="hint.end_date">End Date *</string>
    <string name="hint.end_date_filter">End Date </string>
    <string name="hint.country">Country/Region*</string>
    <string name="hint.rf_address">Address</string>
    <string name="hint.country_v">Country/Region</string>
    <string name="hint.training_title">Training Title *</string>
    <string name="hint.reference_name">Name *</string>
    <string name="hint.add_skill">Add your Skill</string>
    <string name="hint.caricular_activities">Extra Curricular Activities</string>
    <string name="hint.language_title">Language *</string>
    <string name="hint.topic">Topic</string>
    <string name="hint.topic_covered">Topic Covered</string>
    <string name="hint.certification_title">Certification Title *</string>
    <string name="hint.reference_organization">Organization *</string>
    <string name="hint.year">Year *</string>
    <string name="hint.training_year">Training Year *</string>
    <string name="hint.ref_phone_res">Phone No (Res)</string>
    <string name="hint.ref_mobile">Mobile No</string>
    <string name="err_msg_experience">You can  not add more than 3 work discipline!</string>
    <string name="hint.company_name">Company Name *</string>
    <string name="hint.company_business">Company Business *</string>
    <string name="hint.company_location">Company Location</string>
    <string name="hint.position_held">Designation *</string>
    <string name="hint.department">Department</string>
    <string name="hint.responsibilities">Responsibilities</string>
    <string name="hint.currently_working_here">Currently working</string>
    <string name="hint.area_of_experiences">\u0020Area of Experiences *</string>
    <string name="msg.you_can_add_maximum_3_work_discipline">Max 3 working disciplines</string>
    <string name="hint.extracurricular_activities">Extracurricular Activities</string>
    <string name="hint.skill_description">Skill Description</string>
    <string name="hint.add_your_skills">Add Your skills</string>
    <string name="hint.language_name">Language Name *</string>
    <string name="hint.name">Name *</string>
    <string name="hint.organization">Organization Name *</string>
    <string name="hint.designation">Designation *</string>
    <string name="hint.address">Address</string>
    <string name="hint.phoneOff">Phone (Office)</string>
    <string name="hint.phoneRes">Phone (Residential)</string>
    <string name="hint.email">Email Address</string>
    <string name="hint.mobile">Mobile No</string>
    <string name="hint.relation">Relation *</string>
    <string name="hint.first_name">First Name *</string>
    <string name="hint.last_name">Last Name</string>
    <string name="hint.gender">Gender *</string>
    <string name="hint.reading">Reading *</string>
    <string name="hint.ref_relation">Relation*</string>
    <string name="hint.ref_relative">Relative</string>
    <string name="hint.writing">Writing *</string>
    <string name="hint.speaking">Speaking *</string>
    <string name="hint.high">High</string>
    <string name="hint.ref_Relative">Relative </string>
    <string name="hint.medium">Medium</string>
    <string name="hint.law">Low</string>
    <string name="hint.ref_other">Other</string>
    <string name="hint.ref_professional">Professional</string>
    <string name="hint.ref_family_friend">Family Friend</string>
    <string name="hint.ref_academic">Academic</string>
    <string name="hint.mobile_number">Mobile Number *</string>
    <string name="hint.email_address">Email Address *</string>
    <string name="hint.email_address_v">Email Address</string>
    <string name="hint.username">Username</string>
    <string name="hint.password">Password</string>
    <string name="hint.retype_password">Retype Password</string>
    <string name="hint.father_name">Father\'s Name</string>
    <string name="hint.mother_name">Mother\'s Name</string>
    <string name="hint.date_of_birth">Date of Birth *</string>
    <string name="hint.marital_status">Marital Status *</string>
    <string name="hint.nationality">Nationality *</string>
    <string name="hint.national_id_no">National Id No</string>
    <string name="hint.religion">Religion</string>
    <string name="hint.presentAddress">Present Address *</string>
    <string name="hint.presentAddress_v">Present Address</string>
    <string name="hint.permanentAddress">Permanent Address</string>
    <string name="hint.currentLocation">Current Location *</string>
    <string name="hint.homePhone">Mobile No 2</string>
    <string name="hint.officePhone">Mobile No 1</string>
    <string name="hint.alter_email">Alternate Email</string>
    <string name="hint.objective">Objective *</string>
    <string name="special_chars">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 $#@!&amp;*^%`~</string>
    <string name="chars_special">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz .\'-</string>
    <string name="chars_digits">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="chars">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
    <string name="charsWithSpace">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz</string>
    <string name="hint.objective_v">Objective</string>
    <string name="bangladesh_technical_education_board">Bangladesh Technical Education Board</string>
    <string name="currently_offering_jobs">Currently offering jobs</string>
    <string name="_150">150</string>
    <string name="unfollow">Unfollow</string>
    <string name="career_summery_heading">Career Summary</string>
    <string name="career_summery_text">The "Career Summary" is an optional customized section where you can list your key achievements, skills, and relevant experiences to enrich the value of your resume.This section focuses on your relevant experience and lets the employer know that you have taken time to create your resume which shows your qualification as well as activeness.</string>
    <string name="bad_example_heading">Bad Example</string>
    <string name="bad_example_text">I worked for many reputed companies and earned enough knowledge in the field. I think I am the most eligible candidate for relevent job post.</string>
    <string name="good_example_heading">Good Example</string>
    <string name="ok_button_text">OK</string>
    <string name="good_example_text">To obtain the job of Marketing Manager with XXX Inc. Coming with three years marketing experience at a college, strong proficiency with various social media platforms and experience with visual designing to help in increasing profitability.</string>
    <string name="warning_title">Warning</string>
    <string name="warning_cancel_button">Cancel</string>
    <string name="warning_agree_button">Agree</string>
    <string name="accept_kor">Please accept kor accept kor accept kor accept kor accept kor accept kor accept kor</string>
    <string name="label_bdjobs_resume">Bdjobs Resume</string>
    <string name="label_add_bdjobs_resume">Post Bdjobs Resume</string>
    <string name="label_no_bdjobs_resume">Post Bdjobs Resume to avail great chances.</string>
    <string name="personal_details">Personal Details</string>
    <string name="academic_qualification">Academic Qualification</string>
    <string name="training">Training</string>
    <string name="professional_qualification">Professional Certification</string>
    <string name="experience">Experience</string>
    <string name="specialization">Specialization</string>
    <string name="reference">Reference</string>
    <string name="photograph">Photograph</string>
</resources>