<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:id="@+id/follwEmp_cardview"
    android:layout_marginBottom="15dp"
    app:cardCornerRadius="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/guideline6"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@+id/guideline5"
    app:layout_constraintTop_toBottomOf="@+id/textView6"
    app:layout_constraintVertical_bias="1.0">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_home_card">

        <TextView
            android:id="@+id/employers_company_TV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"

            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/bangladesh_technical_education_board"
            android:textColor="#0078D7"

            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/follow_unfollow_BTN"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/followedCompanyNameTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:singleLine="true"
            android:text="@string/currently_offering_jobs"
            android:textColor="#393939"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/employers_company_TV"
            app:layout_constraintTop_toBottomOf="@+id/employers_company_TV" />

        <TextView
            android:id="@+id/offering_jobs_number_TV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="11dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/_150"
            android:textColor="#13A10E"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/followedCompanyNameTV"
            app:layout_constraintTop_toBottomOf="@+id/followedCompanyNameTV" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/follow_unfollow_BTN"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unfollow"
            android:textAllCaps="false"
            android:letterSpacing="0"
            android:fontFamily="@font/roboto"
            android:textColor="#979797"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>