<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_video_resume_not_available"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_video_resume_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/label_bdjobs_resume"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/ic_bdjobs_resume_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_alert_video_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_video_resume_label"
        app:srcCompat="@drawable/ic_alert_resume" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_label_no_video_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/label_no_bdjobs_resume"
        android:textColor="#767676"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_alert_video_resume" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_video_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#13A10E"
        android:text="@string/label_add_bdjobs_resume"
        android:textAllCaps="false"
        app:icon="@drawable/ic_add_resume"
        android:fontFamily="@font/roboto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_no_video_resume" />


</androidx.constraintlayout.widget.ConstraintLayout>